cmake_minimum_required(VERSION 3.20)
project(Day05)

set(CMAKE_CXX_STANDARD 98)

#add_executable(Day05 ex00/main.cpp ex00/Bureaucrat.cpp ex00/Bureaucrat.hpp)

#add_executable(Day05 ex01/main.cpp ex01/Bureaucrat.cpp ex01/Bureaucrat.hpp ex01/Form.cpp ex01/Form.hpp)

add_executable(Day05 ex02/main.cpp ex02/Bureaucrat.cpp ex02/Bureaucrat.hpp ex02/Form.cpp ex02/Form.hpp ex02/ShrubberyCreationForm.cpp ex02/ShrubberyCreationForm.hpp)